# llm-chat

./: CLAUDE.md
backend/: .env.local  .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
backend/docs/: 1_functional_requirements.md  2_development_guide.md
backend/llm_chat_backend/: config.py  dependencies.py
backend/llm_chat_backend/application/: chat.py  response.py
backend/llm_chat_backend/domain/model/: chat.py  inference.py  response.py  user.py
backend/llm_chat_backend/domain/repository/: chat.py  inference.py  response.py  user.py
backend/llm_chat_backend/infra/database/: __init__.py  sqlite.py
backend/llm_chat_backend/infra/repository/: chat.py
backend/llm_chat_backend/presentation/routes/: chat.py  main.py
frontend/: CLAUDE.md  package.json
